<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_result"
            android:ellipsize="end"
            android:layout_marginHorizontal="@dimen/mHT"
            android:maxLines="1"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:textSize="@dimen/tS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingHorizontal="@dimen/mH"
            android:paddingVertical="@dimen/pdV"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_clear"
                android:onClick="onNumberClick"
                android:text="@string/ac"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/plus_minus"
                android:layout_marginHorizontal="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:layout_marginEnd="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"
                android:text="@string/division"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/mH"
            android:paddingVertical="@dimen/pdV"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="@string/seven"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:text="@string/eight"
                android:layout_marginHorizontal="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:text="@string/nine"
                android:layout_marginEnd="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiplication"
                android:onClick="onOperationClick"
                android:text="@string/x"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/mH"
            android:paddingVertical="@dimen/pdV"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                android:text="@string/four"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:text="@string/five"
                android:layout_marginHorizontal="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                android:text="@string/six"
                android:layout_marginEnd="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus_text"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/mH"
            android:paddingVertical="@dimen/pdV"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                android:text="@string/one"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:text="@string/two"
                android:layout_marginHorizontal="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                android:text="@string/three"
                android:layout_marginEnd="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/mH"
            android:paddingVertical="@dimen/pdV"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:layout_width="@dimen/zW"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/pdS"
                android:paddingEnd="0dp"
                android:text="@string/zero"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Dark.Button"
                android:text="@string/dote"
                android:layout_marginHorizontal="@dimen/mH"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                android:text="@string/equal"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>